Validate command calling collStats after finding corruption in a collection can crash the server

XMLWordPrintableJSON

    • Type: Bug
    • Resolution: Fixed
    • Priority: Major - P3
    • 8.1.0-rc0
    • Affects Version/s: None
    • Component/s: None
    • Storage Execution
    • Fully Compatible
    • ALL
    • Execution Team 2024-11-11, Execution Team 2024-11-25
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      In our testing we found that if the db is corrupted then sometimes running the db.collection.validate() command will crash the DB.
      This might not be expected and we'd appreciate if someone from server team look into it.

      Ref: https://mongodb.slack.com/archives/C2RCHGB2L/p1730128730144789

        1. test_dbs-1.zip
          257 kB
        2. test_dbs-2.zip
          286 kB

            Assignee:
            Malik Endsley (Inactive)
            Reporter:
            Piyush Chaudhary
            Votes:
            0 Vote for this issue
            Watchers:
            10 Start watching this issue

              Created:
              Updated:
              Resolved: