SERVER-96356: Don't run logCollStats if indexes have structural damage in validate full: true (#29044)

GitOrigin-RevId: 4e1022cfd2987e3b669c05b85700dfd249a4902c